# ovidee

./: .env.example  .gitignore  .gitmodules  LICENSE  PRD.md  README.en.md  README.es.md  README.md  THIRD_PARTY_NOTICES.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  skills-lock.json
apps/server/: package.json
apps/server/src/: db.js  env.js  hyperframes.js  index.js  llm.js  models.js  pipeline.js  setup.js  web-pipeline.js
apps/web/: next.config.ts  package.json
apps/web/app/: layout.tsx  page.tsx
apps/web/app/components/: Dashboard.tsx  Editor.tsx  Setup.tsx
apps/web/app/lib/: api.ts
db/: schema.sql
engine/: pyproject.toml
engine/helpers/: captions.py  title_card.py  transcribe.py  transcribe_batch.py
engine/scripts/: download_models.py
scripts/: doctor.mjs
